2008-08-08  Alper KANAT  <alperkanat@gmail.com>

	* links/: New application for sidebar links is added.
	* frontpage/models.py: Corrected the level ordering in the admin panel..
	* templates/blog/detail.html: Fixed a little bug..
	* templates/blog/sidebar.html: Admin url resolving not working for now in
	Django.. Entered a bug report about it and still waiting..
	* media/images/rss_title_en.png, media/images/content_title_en.png, 
	media/images/subtitle_en.png, blog/en-urls.py,
	templates/blog/contact_en.html, templates/blog/tags_en.html,
	templates/blog/detail_en.html, templates/blog/sidebar_en.html,
	templates/blog/homepage_en.html, templates/blog/supported_en.html,
	templates/blog/comments_en.html, templates/frontpage/base_en.html,
	templates/frontpage/homepage_en.html, tr-urls.py, en-urls.py: Deleted all
	left English files..
	* settings-example.py: Added new parts..
	* blog/views.py, blog/templatetags/blog_filters.py, extra/search.py,
	extra/search.py, comments/views.py, frontpage/views.py: Modified and fixed
	some parts..
	* Reverting all changes for multilingual raptiye.. Instead I'm going to use
	Django's i18n abilities..
	
2008-08-02  Alper KANAT  <alperkanat@gmail.com>

	* users/urls.py, blog/urls.py, urls.py, comments/urls.py: Modified the url
	mappers to automatically resolve urls and not to hardcode them..
	* blog/models.py: A method that was used to construct the full url of a blog
	post is removed.
	* templates/users/profile.html, templates/blog/tags.html,
	templates/blog/detail.html, templates/blog/comments.html,
	templates/blog/homepage.html, templates/blog/sidebar.html,
	templates/frontpage/homepage.html, templates/frontpage/base.html: Replaced
	all hardcoded URL's with the automatically resolved variables..
	* media/css/style.css, blog/admin.py, blog/models.py,
	templates/blog/detail.html, templates/blog/homepage.html: There is no longer
	image related fields in blog models..
	* blog/templatetags/blog_filters.py: If the post is no longer than