@@ -714,6 +714,11 @@ input[type="text"]:focus, input[type="password"]:focus {
 	background: transparent url(/media/images/calendar_today.png) top right no-repeat;
 }
 
+.link_box {
+	text-align: left;
+	margin-left: 15px;
+}
+
 .aligncenter {
 	text-align: center;
 }
